Generics/Code13_error_report.txt
javac errors for Code13.java 
Code13.java:6: error: unexpected type
    private static List<?> values = new ArrayList<?>(); 
                                                 ^
  required: class or interface without bounds
  found:    ?
Code13.java:10: error: no suitable method found for add(T)
      values.add(value); 
            ^
    method Collection.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
    method List.add(CAP#1) is not applicable
      (argument mismatch; T cannot be converted to CAP#1)
  where T is a type-variable:
    T extends Object declared in class Cell
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object from capture of ?
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
 
============================================================================= 
ExtendJ errors for Code13.java 
 
============================================================================= 
Eclipse ECJ errors for Code13.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code13.java (at line 6)
	private static List<?> values = new ArrayList<?>(); 
	                                    ^^^^^^^^^
Cannot instantiate the type ArrayList<?>
----------
2. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\JavaTypeErrorBenchmarks\Generics\Code13.java (at line 10)
	values.add(value); 
	       ^^^
The method add(capture#1-of ?) in the type List<capture#1-of ?> is not applicable for the arguments (T)
----------
2 problems (2 errors)
